# Whispr-Clone

./: .env  .env.example  README.md  package-lock.json  package.json  tailwind.config.js  verify_key.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  commands.rs  deepgram_client.rs  main.rs  session_manager.rs
src/components/: Controls.tsx  PushToTalkButton.tsx  StatusIndicator.tsx  TranscriptPanel.tsx
src/hooks/: useRecording.ts  useTauriEvents.ts  useTranscript.ts
src/utils/: transcript.ts
